revops-lab/main/default/objects/Approval_Routing__mdt/Approval_Routing__mdt.object-meta.xml
<CustomObject>
    <description>Approval tiers for lab quotes: a tier applies when the max line discount is above its threshold or the net amount reaches its minimum. The highest matching tier decides the approver.</description>
    <label>Approval Routing</label>
    <pluralLabel>Approval Routings</pluralLabel>
</CustomObject>