revops-lab/main/default/objects/Approval_Routing__mdt/fields/Approver_Role__c.field-meta.xml
<CustomField>
    <fullName>Approver_Role__c</fullName>
    <label>Approver Role (DeveloperName)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>