revops-lab/main/default/objects/Approval_Routing__mdt/fields/Min_Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Min_Discount_Percent__c</fullName>
    <inlineHelpText>Tier applies when the max line discount is strictly greater than this value (e.g. 10 = 10%).</inlineHelpText>
    <label>Discount % Above</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>