revops-lab/main/default/objects/Approval_Routing__mdt/fields/Min_Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>Min_Net_Amount__c</fullName>
    <inlineHelpText>Optional. Tier also applies when the quote net amount reaches this value.</inlineHelpText>
    <label>Net Amount At Least</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>